samples/_failures_safe/1761594493_47f827_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d6fe0fe.c: In function ‘main’:
./samples/SAFE/__tmp_7d6fe0fe.c:196:5: error: expected declaration or statement at end of input
  196 |     if (token_count >= MAX_TOKENS) {
      |     ^~
./samples/SAFE/__tmp_7d6fe0fe.c:196:5: error: expected declaration or statement at end of input
